--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,9 @@
     "symfony/yaml": "^7.0.07",
     "brain/hierarchy": "^3.2"
   },
+  "require-dev": {
+    "squizlabs/php_codesniffer": "~3.10.0"
+  },
   "autoload": {
     "psr-4": {
       "Sober\\Controller\\": "src/",
