--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "soberwp/controller",
+  "name": "gofullstack/sage-controller",
   "type": "package",
   "license": "MIT",
   "description": "WordPress package to enable a basic controller when using Blade with Sage 9",
@@ -9,7 +9,13 @@
       "name": "Darren Jacoby",
       "email": "darren@jacoby.co.za",
       "homepage": "https://github.com/darrenjacoby"
+    },
+    {
+      "name": "Mike Biang",
+      "email": "mike@gofullstack.com",
+      "homepage": "https://github.com/mbiang"
     }
+
   ],
   "keywords": [
     "wordpress"
@@ -18,11 +24,11 @@
     "issues": "https://github.com/soberwp/controller/issues"
   },
   "require": {
-    "php": ">=5.6.0",
-    "composer/installers": "~1.0",
-    "hassankhan/config": "^0.10.0",
-    "symfony/yaml": "^3.2",
-    "brain/hierarchy": "^2.3"
+    "php": ">=7.3",
+    "composer/installers": "~2.0",
+    "hassankhan/config": "^3.1.0",
+    "symfony/yaml": "^5.4.39",
+    "brain/hierarchy": "^2.4"
   },
   "require-dev": {
     "squizlabs/php_codesniffer": "2.*"
@@ -40,5 +46,10 @@
     "test": [
       "vendor/bin/phpcs --extensions=php --ignore=vendor/ ."
     ]
+  },
+  "config": {
+    "allow-plugins": {
+      "composer/installers": true
+    }
   }
 }
