--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,7 @@
   "require": {
     "php": ">=7.3",
     "hassankhan/config": "^3.1.0",
-    "symfony/yaml": "^5.4.39",
+    "symfony/yaml": "~4.2",
     "brain/hierarchy": "^2.4"
   },
   "require-dev": {
