--- a/composer.json
+++ b/composer.json
@@ -24,11 +24,11 @@
     "issues": "https://github.com/soberwp/controller/issues"
   },
   "require": {
-    "php": ">=7.3",
-    "hassankhan/config": "=3.0.1",
-    "symfony/yaml": "~4.2",
-    "brain/hierarchy": "^2.4",
-    "roave/better-reflection": "^4.12"
+    "php": ">=8",
+    "hassankhan/config": "~3.1",
+    "symfony/yaml": "~7.0.7",
+    "brain/hierarchy": "^3.1",
+    "roave/better-reflection": "~6.3"
   },
   "require-dev": {
     "squizlabs/php_codesniffer": "2.*"
